--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" 
-    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" 
-    referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -47,7 +45,7 @@
             </div>
         </section>
         <!-- Section Feature -->
-        <section class="feature">
+        <section class="section feature">
             <div class="container">
                 <h2 class="visually-hidden">Our Features</h2>
                 <ul class="feature-list list">
@@ -72,7 +70,7 @@
             </div>
         </section>
         <!-- Section Pic -->
-        <section class="pic">
+        <section class="section pic">
             <div class="container">
                 <h2 class="pic-suptitle">What are we doing</h2>
                 <ul class="pic-list list">
@@ -83,7 +81,7 @@
             </div>
         </section>
         <!-- Section Team -->
-        <section class="team">
+        <section class="section team">
             <div class="container">
                 <h2 class="team-title">Our Team</h2>
                 <ul class="team-list list">
@@ -108,9 +106,9 @@
         </section>
     </main>
     <!-- Footer -->
-    <footer class="footer">
+    <footer class="footer ">
         <div class="container">
-            <a href="./index.html" class="logotype link logo"> Web <span class="studio-footer">Studio</span></a>
+            <a href="./index.html" class="logotype link logo footer-logo"> Web <span class="studio-footer">Studio</span></a>
             <p class="footer-text text">
                 Increase the flow of customers and sales for your business with digital marketing & growth solutions.
             </p>  
