--- a/portfolio.html
+++ b/portfolio.html
@@ -8,14 +8,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" 
-    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" 
-    referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
 <!--Header -->
-<header class="header">
+<header class="header ">
     <div class="container header-container">
         <nav class="header-navigation">
             <a href="./index.html" class="logotype link logo"> Web <span class="studio">Studio</span></a>
@@ -25,75 +23,76 @@
                 <li class="menu-header-item"> <a href="" class="menu-header-link link">Contacts</a></li>
             </ul>
         </nav>
-        <!-- Address -->
-        <address class="contact">
-            <ul class="header-menu list">
-                <li>
-                    <a href="mailto:info@devstudio.com" class="contact-email link">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a href="tel:+110001111111" class="contact-pfone link">+11 (000) 111-11-11</a>
-                </li>
-            </ul>
-        </address>
+            <address class="contact">
+                    <ul class="header-menu list">
+                            <li class="contacts">
+                                <a href="mailto:info@devstudio.com" class="contact-email link">info@devstudio.com</a>
+                            </li>
+                            <li class="contacts">
+                                <a href="tel:+110001111111" class="contact-pfone link">+11 (000) 111-11-11</a>
+                            </li>
+                    </ul>
+            </address>
     </div>
 </header>
 <main>
     <section>
-    <div class="container">
-        <h1 class="visually-hidden ">Portfolio</h1>
-        <ul class="portfolio-button list">
-            <li><button type="button" class="btn btn-body">All</button></li>
-            <li><button type="button" class="btn btn-body">Web Site</button></li>
-            <li><button type="button" class="btn btn-body">App</button></li>
-            <li><button type="button" class="btn btn-body">Design</button></li>
-            <li><button type="button" class="btn btn-body">Marketing</button></li>
-        </ul>
-        <ul class="portfolio-pic list">
-            <li><a href="" class="link"><img class="picture" src="images/work1.jpg" alt="img" width="360" height="300">
-                <h2 class="portfolio-subtitle title">Banking App Interface Concept</h2>
-                <p class="portfolio-text text">App</p></a>
-            </li>
-            <li><a href="" class="link"><img class="picture" src="images/work2.jpg" alt="img" width="360" height="300" >
-                <h2 class="portfolio-subtitle title">Cashless Payment</h2>
-                <p class="portfolio-text text">Marketing</p></a>
-            </li>
-            <li><a href="" class="link"><img class="picture" src="images/work3.jpg" alt="img" width="360" height="300" >
-                <h2 class="portfolio-subtitle title">Meditaion App</h2>
-                <p class="portfolio-text text">App</p></a>
-            </li>
-            <li><a href="" class="link"><img class="picture" src="images/work4.jpg" alt="img" width="360" height="300" >
-                <h2 class="portfolio-subtitle title">Taxi Service</h2>
-                <p class="portfolio-text text">Marketing</p></a>
-            </li>
-            <li><a href="" class="link"><img class="picture" src="images/work5.jpg" alt="img" width="360" height="300" >
-                <h2 class="portfolio-subtitle title">Screen Illustrations</h2>
-                <p class="portfolio-text text">Design</p></a>
-            </li>
-            <li><a href="" class="link"><img class="picture" src="images/work6.jpg" alt="img" width="360" height="300" >
-                <h2 class="portfolio-subtitle title">Online Courses</h2>
-                <p class="portfolio-text text">Marketing</p></a>
-            </li>
-            <li><a href="" class="link"><img class="picture" src="images/work7.jpg" alt="img" width="360" height="300" >
-                <h2 class="portfolio-subtitle title">Instagram Stories Concept</h2>
-                <p class="portfolio-text text">Design</p></a>
-            </li>
-            <li><a href="" class="link"><img class="picture" src="images/work8.jpg" alt="img" width="360" height="300">
-                <h2 class="portfolio-subtitle title">Organic Food</h2>
-                <p class="portfolio-text text">Web Site</p></a>
-            </li>
-            <li><a href="" class="link"><img class="picture" src="images/work9.jpg" alt="img" width="360" height="300">
-                <h2 class="portfolio-subtitle title">Fresh Coffee</h2>
-                <p class="portfolio-text text">Web Site</p></a>
-            </li>
-        </ul>
-    </div>
+        <div class="container portfolio-flex">
+            <h1 class="visually-hidden ">Portfolio</h1>
+            <ul class="portfolio-button list">
+                <li><button type="button" class="btn btn-body">All</button></li>
+                <li><button type="button" class="btn btn-body">Web Site</button></li>
+                <li><button type="button" class="btn btn-body">App</button></li>
+                <li><button type="button" class="btn btn-body">Design</button></li>
+                <li><button type="button" class="btn btn-body">Marketing</button></li>
+            </ul>
+        </div>
+        <div class="container portfolio-flex">
+            <ul class="portfolio-pic list">
+                <li class="pic-item"><a href="" class="link"><img class="picture" src="images/work1.jpg" alt="img" width="360" height="300">
+                    <h2 class="portfolio-subtitle title">Banking App Interface Concept</h2>
+                    <p class="portfolio-text text">App</p></a>
+                </li>
+                <li class="pic-item"><a href="" class="link"><img class="picture" src="images/work2.jpg" alt="img" width="360" height="300" >
+                    <h2 class="portfolio-subtitle title">Cashless Payment</h2>
+                    <p class="portfolio-text text">Marketing</p></a>
+                </li>
+                <li class="pic-item"><a href="" class="link"><img class="picture" src="images/work3.jpg" alt="img" width="360" height="300" >
+                    <h2 class="portfolio-subtitle title">Meditaion App</h2>
+                    <p class="portfolio-text text">App</p></a>
+                </li>
+                <li class="pic-item"><a href="" class="link"><img class="picture" src="images/work4.jpg" alt="img" width="360" height="300" >
+                    <h2 class="portfolio-subtitle title">Taxi Service</h2>
+                    <p class="portfolio-text text">Marketing</p></a>
+                </li>
+                <li class="pic-item"><a href="" class="link"><img class="picture" src="images/work5.jpg" alt="img" width="360" height="300" >
+                    <h2 class="portfolio-subtitle title">Screen Illustrations</h2>
+                    <p class="portfolio-text text">Design</p></a>
+                </li>
+                <li class="pic-item"><a href="" class="link"><img class="picture" src="images/work6.jpg" alt="img" width="360" height="300" >
+                    <h2 class="portfolio-subtitle title">Online Courses</h2>
+                    <p class="portfolio-text text">Marketing</p></a>
+                </li>
+                <li class="pic-item"><a href="" class="link"><img class="picture" src="images/work7.jpg" alt="img" width="360" height="300" >
+                    <h2 class="portfolio-subtitle title">Instagram Stories Concept</h2>
+                    <p class="portfolio-text text">Design</p></a>
+                </li>
+                <li class="pic-item"><a href="" class="link"><img class="picture" src="images/work8.jpg" alt="img" width="360" height="300">
+                    <h2 class="portfolio-subtitle title">Organic Food</h2>
+                    <p class="portfolio-text text">Web Site</p></a>
+                </li>
+                <li class="pic-item"><a href="" class="link"><img class="picture" src="images/work9.jpg" alt="img" width="360" height="300">
+                    <h2 class="portfolio-subtitle title">Fresh Coffee</h2>
+                    <p class="portfolio-text text">Web Site</p></a>
+                </li>
+            </ul>
+        </div>
 </section>
 </main>
 <!-- Footer -->
-<footer class="footer">
+<footer class="footer ">
     <div class="container">
-        <a href="./index.html" class="logotype link logo"> Web <span class="studio-footer">Studio</span></a>
+        <a href="./index.html" class="logotype link logo footer-logo"> Web <span class="studio-footer">Studio</span></a>
         <p class="footer-text text">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>  
