--- a/index.html
+++ b/index.html
@@ -86,20 +86,28 @@
                 <h2 class="team-title">Our Team</h2>
                 <ul class="team-list list">
                     <li class="team-item"> <img src="./images/team1.jpg" alt="Team" width="264" height="260">
-                        <h3 class="team-subtitle title">Mark Guerrero</h3>
-                        <p class="team-text text">Product Designer</p>
+                        <div class="team-div">
+                            <h3 class="team-subtitle title">Mark Guerrero</h3>
+                            <p class="team-text text">Product Designer</p>
+                        </div>
                     </li>
                     <li class="team-item"> <img src="./images/team2.jpg" alt="Team" width="264" height="260">
+                        <div class="team-div">
                         <h3 class="team-subtitle title">Tom Ford</h3>
                         <p class="team-text text">Frontend Developer</p>
+                    </div>
                     </li>
                     <li class="team-item"> <img src="./images/team3.jpg" alt="Team" width="264" height="260">
+                        <div class="team-div">
                         <h3 class="team-subtitle title">Camila Garcia</h3>
                         <p class="team-text text">Marketing</p>
+                    </div>
                     </li>
                     <li class="team-item"> <img src="./images/team4.jpg" alt="Team" width="264" height="260">
+                        <div class="team-div">
                         <h3 class="team-subtitle title">Daniel Wilson</h3>
                         <p class="team-text text">UI Designer</p>
+                    </div>
                     </li>
                 </ul>
             </div>
