--- a/portfolio.html
+++ b/portfolio.html
@@ -36,8 +36,8 @@
     </div>
 </header>
 <main>
-    <section>
-        <div class="container portfolio-flex">
+    <section class="portfolio-flex">
+        <div class="container">
             <h1 class="visually-hidden ">Portfolio</h1>
             <ul class="portfolio-button list">
                 <li><button type="button" class="btn btn-body">All</button></li>
@@ -46,44 +46,60 @@
                 <li><button type="button" class="btn btn-body">Design</button></li>
                 <li><button type="button" class="btn btn-body">Marketing</button></li>
             </ul>
-        </div>
-        <div class="container portfolio-flex">
             <ul class="portfolio-pic list">
                 <li class="pic-item"><a href="" class="link"><img class="picture" src="images/work1.jpg" alt="img" width="360" height="300">
-                    <h2 class="portfolio-subtitle title">Banking App Interface Concept</h2>
-                    <p class="portfolio-text text">App</p></a>
+                    <div class="portfolio-div">
+                        <h2 class="portfolio-subtitle title">Banking App Interface Concept</h2>
+                        <p class="portfolio-text text">App</p></a>
+                    </div>
                 </li>
                 <li class="pic-item"><a href="" class="link"><img class="picture" src="images/work2.jpg" alt="img" width="360" height="300" >
-                    <h2 class="portfolio-subtitle title">Cashless Payment</h2>
-                    <p class="portfolio-text text">Marketing</p></a>
+                    <div class="portfolio-div">
+                        <h2 class="portfolio-subtitle title">Cashless Payment</h2>
+                        <p class="portfolio-text text">Marketing</p></a>
+                    </div>
                 </li>
                 <li class="pic-item"><a href="" class="link"><img class="picture" src="images/work3.jpg" alt="img" width="360" height="300" >
-                    <h2 class="portfolio-subtitle title">Meditaion App</h2>
-                    <p class="portfolio-text text">App</p></a>
+                    <div class="portfolio-div">
+                        <h2 class="portfolio-subtitle title">Meditaion App</h2>
+                        <p class="portfolio-text text">App</p></a>
+                    </div>
                 </li>
                 <li class="pic-item"><a href="" class="link"><img class="picture" src="images/work4.jpg" alt="img" width="360" height="300" >
-                    <h2 class="portfolio-subtitle title">Taxi Service</h2>
-                    <p class="portfolio-text text">Marketing</p></a>
+                    <div class="portfolio-div">
+                        <h2 class="portfolio-subtitle title">Taxi Service</h2>
+                        <p class="portfolio-text text">Marketing</p></a>
+                    </div>
                 </li>
                 <li class="pic-item"><a href="" class="link"><img class="picture" src="images/work5.jpg" alt="img" width="360" height="300" >
-                    <h2 class="portfolio-subtitle title">Screen Illustrations</h2>
-                    <p class="portfolio-text text">Design</p></a>
+                    <div class="portfolio-div">
+                        <h2 class="portfolio-subtitle title">Screen Illustrations</h2>
+                        <p class="portfolio-text text">Design</p></a>
+                    </div>
                 </li>
                 <li class="pic-item"><a href="" class="link"><img class="picture" src="images/work6.jpg" alt="img" width="360" height="300" >
-                    <h2 class="portfolio-subtitle title">Online Courses</h2>
-                    <p class="portfolio-text text">Marketing</p></a>
+                    <div class="portfolio-div">
+                        <h2 class="portfolio-subtitle title">Online Courses</h2>
+                        <p class="portfolio-text text">Marketing</p></a>
+                    </div>
                 </li>
                 <li class="pic-item"><a href="" class="link"><img class="picture" src="images/work7.jpg" alt="img" width="360" height="300" >
-                    <h2 class="portfolio-subtitle title">Instagram Stories Concept</h2>
-                    <p class="portfolio-text text">Design</p></a>
+                    <div class="portfolio-div">
+                        <h2 class="portfolio-subtitle title">Instagram Stories Concept</h2>
+                        <p class="portfolio-text text">Design</p></a>
+                    </div>
                 </li>
                 <li class="pic-item"><a href="" class="link"><img class="picture" src="images/work8.jpg" alt="img" width="360" height="300">
-                    <h2 class="portfolio-subtitle title">Organic Food</h2>
-                    <p class="portfolio-text text">Web Site</p></a>
+                    <div class="portfolio-div">
+                        <h2 class="portfolio-subtitle title">Organic Food</h2>
+                        <p class="portfolio-text text">Web Site</p></a>
+                    </div>
                 </li>
                 <li class="pic-item"><a href="" class="link"><img class="picture" src="images/work9.jpg" alt="img" width="360" height="300">
-                    <h2 class="portfolio-subtitle title">Fresh Coffee</h2>
-                    <p class="portfolio-text text">Web Site</p></a>
+                    <div class="portfolio-div">
+                        <h2 class="portfolio-subtitle title">Fresh Coffee</h2>
+                        <p class="portfolio-text text">Web Site</p></a>
+                    </div>
                 </li>
             </ul>
         </div>
